fixtures/cs-hash-02/bad/node-rs-bcrypt-weak-cost.ts
import bcrypt from "@node-rs/bcrypt";

export function hashPassword(password: string) {
	return bcrypt.hashSync(password, 8);
}
